# tinygl

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  LIMITATIONS  Makefile  README  README.md  config.mk
Raw_Demos/: CMakeLists.txt
SDL_Examples/: Makefile  game.c  gears.c  helloworld.c  menu.c  model.c  texture.c
examples/: 3dmath.h  CMakeLists.txt  gears.c  glu.c  glx.c  mech.c  openimgui.h  spin.c  stringutil.h  texobj.c  tobjparse.h  triangle.c  x11.c
examples/raw/: Makefile  bigfont.c  gears.c  t2i.c
examples/sdl/: Makefile  game.c  gears.c  hello.c  helloworld.c  menu.c  model.c  texture.c
include/: zbuffer.h  zfeatures.h
include/TGL/: gl.h
mk/: common.mk  examples.mk  src.mk  test.mk
src/: CMakeLists.txt  Makefile  api.c  arrays.c  bitmap.c  blend.c  clear.c  clip.c  dither.c  enable.c  error_check.h  error_check_no_context.h  font8x8_basic.h  get.c  image_util.c  init.c  light.c  line.c  list.c  math.c  matrix.c  memory.c  misc.c  msghandling.c  msghandling.h  opinfo.h  select.c  specbuf.c  texture.c  tgl.h  tgl_api.c  tgl_arrays.c  tgl_bitmap.c  tgl_clear.c  tgl_clip.c  tgl_dither.c  tgl_error.c  tgl_get.c  tgl_image_util.c  tgl_init.c  (+39 more)
tests/: driver.sh
tests/expected/: gears_render.sha256
